client/src/components/pages/projects-page/projects-page.css
.pp-message-underline {
  color: var(--accent-color-3);
}

.pp-message-underline:hover {
  text-decoration: underline;
}

.pp-item-background {
  display: inline-block;
  left: 0;
  right: 0;
  justify-content: center;
  text-align: center;
  margin: 1em;
  background-color: var(--bg-color-1);
  border: var(--border);
  border-radius: 15px;
  width: 400px;
  height: 225px;
  background-position: center;
  background-size: cover;
}

@media screen and (max-width: 1000px) {
  .pp-item-background, .pp-item-overlay  {
    width: 400px;
    height: 225px;
  }
}

@media screen and (max-width: 900px) {
  .pp-item-background, .pp-item-overlay  {
      width: 350px;
      height: 300px;
  }
}

@media screen and (max-width: 800px) {
  .pp-item-background, .pp-item-overlay  {
    width: 250px;
    height: 300px;
  }
}

@media screen and (max-width: 600px) {
  .pp-item-background, .pp-item-overlay  {
    width: 400px;
    height: 300px;
  }
}

@media screen and (min-width: 1000px) {
  .pp-item-background, .pp-item-overlay {
    width: 400px;
    height: 225px;
  }
}

.pp-item-overlay {
  border: var(--border);
  border-radius: 15px;
  display: inline-block;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pp-item-overlay:hover {
  background-color: rgba(249, 174, 159, 0.9);
}

.pp-item-overlay:hover .pp-item-desc {
  opacity: 1;
}

.pp-item-title {
  color: var(--text-color-1);
  font-size: 20px;
  font-weight: bold;
  padding: 0.5em;
}

.pp-item-desc {
  color: var(--text-color-1);
  font-size: 20px;
  opacity: 0;
  padding: 1em;
}

